--- a/spring-boot-plan/src/main/resources/application.properties
+++ b/spring-boot-plan/src/main/resources/application.properties
@@ -1,4 +1,1 @@
-sentry.dsn=https://2230fa9788c606f1297c02d63caa26df@o4504533099937792.ingest.sentry.io/4506233286295552
-sentry.traces-sample-rate=1.0
-sentry.debug=true
-server.port=8082
+spring.profiles.active=local
